--- a/src/res/Main.glade
+++ b/src/res/Main.glade
@@ -2,6 +2,23 @@
 <!-- Generated with glade 3.16.1 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
+  <object class="GtkAdjustment" id="adjustmentValue1">
+    <property name="lower">-10000</property>
+    <property name="upper">10000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkSpinButton" id="spinbutton1">
+    <property name="visible">True</property>
+    <property name="can_focus">True</property>
+    <property name="adjustment">adjustmentValue1</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustmentValue2">
+    <property name="lower">-10000</property>
+    <property name="upper">10000</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkApplicationWindow" id="applicationwindow">
     <property name="can_focus">False</property>
     <property name="window_position">center</property>
@@ -14,11 +31,15 @@
           <object class="GtkSpinButton" id="numValue1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="halign">end</property>
             <property name="shadow_type">none</property>
             <property name="progress_fraction">0.01</property>
             <property name="progress_pulse_step">1</property>
             <property name="input_purpose">alpha</property>
+            <property name="adjustment">adjustmentValue1</property>
+            <property name="climb_rate">0.01</property>
             <property name="digits">1</property>
+            <property name="numeric">True</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -31,13 +52,15 @@
           <object class="GtkSpinButton" id="numValue2">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="max_length">2</property>
-            <property name="xalign">0.0099999997764825821</property>
-            <property name="shadow_type">out</property>
+            <property name="xalign">2.2351741291171123e-10</property>
+            <property name="shadow_type">none</property>
             <property name="progress_fraction">0.01</property>
             <property name="progress_pulse_step">1</property>
-            <property name="input_purpose">number</property>
+            <property name="input_purpose">alpha</property>
+            <property name="adjustment">adjustmentValue2</property>
+            <property name="climb_rate">0.019999999776482584</property>
             <property name="digits">1</property>
+            <property name="numeric">True</property>
           </object>
           <packing>
             <property name="left_attach">2</property>
